--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     </head>
     <body>
         <section class="header">
-            
+            <nav>
+                <div class="nav-links">
+                    <ul>
+                        <li><a href="">HOME</a></li>
+                        <li><a href="">ABOUT</a></li>
+                        <li><a href="">CONTACT</a></li>
+                    </ul>
+                </div>
+            </nav>
         </section>
     </body>
 </html>
