--- a/index.html
+++ b/index.html
@@ -2,20 +2,41 @@
 <html>
     <head>
         <meta name="viewpoint" content="with=device-width, initial-scale=1.0">
-        <title>Stop-inn-Stay</title>
+        <title>Stop-Inn-Stay</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <section class="header">
             <nav>
-                <div class="nav-links">
+                <div class="nav-links" id="navLinks">
+                    <i class="fa fa-times" onclick="hideMenu()"></i>
                     <ul>
                         <li><a href="">HOME</a></li>
                         <li><a href="">ABOUT</a></li>
                         <li><a href="">CONTACT</a></li>
                     </ul>
                 </div>
+                <i class="fa fa-bars" onclick="showMenu()"></i>
             </nav>
+            <div class="text-box">
+                <h1>Award Winning Inn</h1>
+                <p>
+                    Offal succulents squid schlitz pug everyday carry small batch semiotics seitan microdosing lo-fi irony lomo.<br>Whatever narwhal distillery photo booth.
+                </p>
+                <a href="" class="hero-btn">Visit Us To Know More</a>
+            </div>
         </section>
+        
+        <script>
+            var navLinks=document.getElementById("navLinks");
+            function showMenu() {
+                navLinks.style.right="0";
+            }
+            function hideMenu() {
+                navLinks.style.right="-200px";
+            }
+        </script>
+
     </body>
 </html>
