added amenities section

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                     <ul>
                         <li><a href="">HOME</a></li>
                         <li><a href="">ABOUT</a></li>
+                        <li><a href="">AMENITIES</a></li>
                         <li><a href="">CONTACT</a></li>
                     </ul>
                 </div>
@@ -25,6 +26,24 @@
                     Offal succulents squid schlitz pug everyday carry small batch semiotics seitan microdosing lo-fi irony lomo.<br>Whatever narwhal distillery photo booth.
                 </p>
                 <a href="" class="hero-btn">Visit Us To Know More</a>
+            </div>
+        </section>
+
+        <section class="amenities">
+            <h1>Amenities We Offer</h1>
+            <div class="row">
+                <div class="course-col">
+                    <h3>Fitness Center</h3>
+                    <p>Austin readymade banh mi vegan pork belly stumptown. Messenger bag woke tousled venmo. Banh mi forage vaporware listicle before they sold out etsy poke cold-pressed kitsch keffiyeh next level typewriter tacos waistcoat selvage. Dreamcatcher drinking vinegar scenester, etsy retro glossier palo santo twee try-hard biodiesel enamel pin air plant food truck man bun gentrify. Helvetica marfa heirloom meditation.</p>
+                </div>
+                <div class="course-col">
+                    <h3>Spa</h3>
+                    <p>Austin readymade banh mi vegan pork belly stumptown. Messenger bag woke tousled venmo. Banh mi forage vaporware listicle before they sold out etsy poke cold-pressed kitsch keffiyeh next level typewriter tacos waistcoat selvage. Dreamcatcher drinking vinegar scenester, etsy retro glossier palo santo twee try-hard biodiesel enamel pin air plant food truck man bun gentrify. Helvetica marfa heirloom meditation.</p>
+                </div>
+                <div class="course-col">
+                    <h3>Indoor & Outdoor Pool</h3>
+                    <p>Austin readymade banh mi vegan pork belly stumptown. Messenger bag woke tousled venmo. Banh mi forage vaporware listicle before they sold out etsy poke cold-pressed kitsch keffiyeh next level typewriter tacos waistcoat selvage. Dreamcatcher drinking vinegar scenester, etsy retro glossier palo santo twee try-hard biodiesel enamel pin air plant food truck man bun gentrify. Helvetica marfa heirloom meditation.</p>
+                </div>
             </div>
         </section>
         
