--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                         <li><a href="">HOME</a></li>
                         <li><a href="">ABOUT</a></li>
                         <li><a href="">AMENITIES</a></li>
+                        <li><a href="">LOCATIONS</a></li>
                         <li><a href="">CONTACT</a></li>
                     </ul>
                 </div>
@@ -43,6 +44,24 @@
                 <div class="course-col">
                     <h3>Indoor & Outdoor Pool</h3>
                     <p>Austin readymade banh mi vegan pork belly stumptown. Messenger bag woke tousled venmo. Banh mi forage vaporware listicle before they sold out etsy poke cold-pressed kitsch keffiyeh next level typewriter tacos waistcoat selvage. Dreamcatcher drinking vinegar scenester, etsy retro glossier palo santo twee try-hard biodiesel enamel pin air plant food truck man bun gentrify. Helvetica marfa heirloom meditation.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="locations">
+            <h1>Our International Locations</h1>
+            <div class="row">
+                <div class="locations-col">
+                    <img src="images/cancun.jpg">
+                    <h3>Cancun</h3>
+                </div>
+                <div class="locations-col">
+                    <img src="images/dubai.jpg">
+                    <h3>Dubai</h3>
+                </div>
+                <div class="locations-col">
+                    <img src="images/sydney.jpg">
+                    <h3>Sydney</h3>
                 </div>
             </div>
         </section>
